# BlendingToolKit

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pydocstyle.ini  .pylintrc  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINER.md  README.md  btk_input.py  catalog.html  conda_env.yml  create_observing_generator.py  dev-requirements.txt  docs-requirements.txt  environment.yml  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.docs.txt  requirements.txt  sample_group_catalog.fits  sample_input_catalog.fits  searchindex.js  setup.py  simulate.py
.github/: MAINTAINER.md  config.yml
.github/workflows/: codeql-analysis.yml  config.yml  docs.yml  lint.yml  notebooks.yml  publish.yml  pytest.yml  test.yml  unittests.yml
btk/: __init__.py  __main__.py  blend_batch.py  blend_generator.py  catalog.py  catsim_draw.py  compute_metrics.py  config.py  create_blend_generator.py  create_observing_generator.py  cutout.py  deblend.py  draw_blends.py  galsim_draw.py  galsim_real_draws.py  generative_model.py  get_input_catalog.py  main.py  match.py  measure.py  metrics.py  metrics_utils.py  multiprocess.py  obs_conditions.py  plot_utils.py  plotting.py  sampling_functions.py  survey.py  test_btk.py  utils.py
btk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
btk/metrics/: __init__.py  base.py  detection.py  reconstruction.py  segmentation.py  utils.py
conf/: __init__.py  config.yaml
conf/catalog/: catsim.yaml  cosmos.yaml
conf/draw_blends/: catsim.yaml  cosmos.yaml  galsim_hub.yaml
conf/hydra/: btk_help.yaml
conf/sampling/: default.yaml  galsim_hub.yaml  group.yaml  group_sampling.yaml  group_sampling_numbered.yaml
conf/surveys/: CFHT.yaml  DES.yaml  Euclid.yaml  HSC.yaml  HST.yaml  Rubin.yaml
config/: config.yaml
config/draw_blend/: catsim.yaml  galsim_hub.yaml
config/sampling/: default.yaml  group.yaml
data/: real_galaxy_PSF_images_25.2_n11.fits  real_galaxy_PSF_images_25.2_n13.fits  real_galaxy_PSF_images_25.2_n18.fits  real_galaxy_PSF_images_25.2_n20.fits  real_galaxy_PSF_images_25.2_n21.fits  real_galaxy_PSF_images_25.2_n25.fits  real_galaxy_PSF_images_25.2_n26.fits  real_galaxy_PSF_images_25.2_n3.fits  real_galaxy_PSF_images_25.2_n30.fits  real_galaxy_PSF_images_25.2_n32.fits  real_galaxy_PSF_images_25.2_n33.fits  real_galaxy_PSF_images_25.2_n34.fits  real_galaxy_PSF_images_25.2_n35.fits  real_galaxy_PSF_images_25.2_n36.fits  real_galaxy_PSF_images_25.2_n4.fits  real_galaxy_PSF_images_25.2_n42.fits  real_galaxy_PSF_images_25.2_n47.fits  real_galaxy_PSF_images_25.2_n49.fits  real_galaxy_PSF_images_25.2_n56.fits  real_galaxy_PSF_images_25.2_n57.fits  real_galaxy_PSF_images_25.2_n58.fits  real_galaxy_PSF_images_25.2_n60.fits  real_galaxy_PSF_images_25.2_n61.fits  real_galaxy_PSF_images_25.2_n62.fits  real_galaxy_PSF_images_25.2_n64.fits  real_galaxy_PSF_images_25.2_n65.fits  real_galaxy_PSF_images_25.2_n66.fits  real_galaxy_PSF_images_25.2_n74.fits  real_galaxy_PSF_images_25.2_n76.fits  real_galaxy_PSF_images_25.2_n78.fits  real_galaxy_PSF_images_25.2_n80.fits  real_galaxy_PSF_images_25.2_n82.fits  real_galaxy_PSF_images_25.2_n83.fits  real_galaxy_PSF_images_25.2_n84.fits  real_galaxy_PSF_images_25.2_n85.fits  real_galaxy_PSF_images_25.2_n88.fits  real_galaxy_PSF_images_25.2_n9.fits  real_galaxy_catalog_25.2_fits.fits  real_galaxy_images_25.2_n10.fits  real_galaxy_images_25.2_n11.fits  (+45 more)
data/cache/: eff_mat.pkl  recall.pkl  reconstruction.pkl  scarlet_residuals.pkl
data/cosmos/: real_galaxy_PSF_images_25.2_n1.fits  real_galaxy_PSF_images_25.2_n10.fits  real_galaxy_PSF_images_25.2_n12.fits  real_galaxy_PSF_images_25.2_n14.fits  real_galaxy_PSF_images_25.2_n15.fits  real_galaxy_PSF_images_25.2_n16.fits  real_galaxy_PSF_images_25.2_n17.fits  real_galaxy_PSF_images_25.2_n19.fits  real_galaxy_PSF_images_25.2_n2.fits  real_galaxy_PSF_images_25.2_n22.fits  real_galaxy_PSF_images_25.2_n23.fits  real_galaxy_PSF_images_25.2_n24.fits  real_galaxy_PSF_images_25.2_n27.fits  real_galaxy_PSF_images_25.2_n28.fits  real_galaxy_PSF_images_25.2_n29.fits  real_galaxy_PSF_images_25.2_n31.fits  real_galaxy_PSF_images_25.2_n37.fits  real_galaxy_PSF_images_25.2_n38.fits  real_galaxy_PSF_images_25.2_n39.fits  real_galaxy_PSF_images_25.2_n40.fits  real_galaxy_PSF_images_25.2_n41.fits  (+79 more)
docs/: catalog.html  cli.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  tutorials.html  user_guide.html
input/: btk-config.yaml  btk_input.py  example-config.yaml
notebooks/: 00-intro.ipynb  00-quickstart.ipynb  00-real-galaxies.ipynb  00-real-galaxy-noise.ipynb  01-advanced-deblending.ipynb  01-advanced-generation.ipynb  01-advanced-metrics.ipynb  01-catsim-scenes.ipynb  01-scarlet.ipynb  01a-cosmos_tutorial.ipynb  01b-scarlet-measure.ipynb  01c-galsim_hub_tutorial.ipynb  01c-shear.ipynb  02-advanced-plots.ipynb  02-paper_figures.ipynb  02a-multi-tutorial.ipynb  02b-custom-tutorial.ipynb  Gaslim_draw.ipynb  README.md  Test.ipynb  advanced-features.ipynb  btk-tutorial-1.ipynb  btk-tutorial.ipynb  btk-tutorial2.ipynb  cache_scarlet_recon.pkl  cosmos_tutorial.ipynb  custom-tutorial.ipynb  custom_sampling_function.ipynb  detection_metrics.ipynb  evaluate_metrics.ipynb  galsim_hub_tutorial.ipynb  intro.ipynb  metrics-demo.ipynb  mock-data.ipynb  multi-tutorial.ipynb  new-btk-tutorial.ipynb  run_basic.ipynb  scarlet-measure.ipynb  scratch.ipynb  shear-test.ipynb  (+4 more)
paper/: paper.md
paper_figs/: eff_mat_comparison.ipynb  red_component_testing.ipynb
src/: btk.catalog.html  btk.draw_blends.html  btk.html  btk.measure.html  btk.metrics.html  btk.survey.html
tests/: conftest.py  sanitize.cfg  test-config.yaml  test_advanced_analysis.py  test_catalog.py  test_cosmos.py  test_deblenders.py  test_detection_match.py  test_draw.py  test_error_cases.py  test_galsim_hub.py  test_group_sampling.py  test_input.py  test_main.py  test_matching.py  test_measure.py  test_metrics.py  test_mr.py  test_pipeline.py  test_sampling.py  test_save.py  test_utils.py
(+72 files in other folders)
