[project]
authors = [
  { name = "Thomas Sainrat" },
  { name = "Andrii Torychlo" },
  { name = "Somwya Kamath" },
  { name = "Maxime Paillasa" },
  { name = "Alexandre Boucaud" },
  { name = "Biswajit Biswas" },
  { name = "Prakruth Adari" },
  { name = "Remy Joseph" },
  { name = "Patricia Burchat" },
  { name = "Cyrille Doux" },
  { name = "Eric Aubourg" },
]
maintainers = [{ name = "Ismael Mendoza", email = "imendoza@umich.edu" }]
classifiers = [
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
description = "Blending ToolKit"
keywords = ["cosmology", "galaxies", "blending", "lsst", "simulation"]
license = { file = "LICENSE" }
name = "blending_toolkit"
readme = "README.md"
version = "1.0.6"
requires-python = ">=3.9,<3.13"
dependencies = [
  "galsim>=2.4.9",
  "sep_pjw>=1.3.7",
  "surveycodex>=1.2.0",
  "numpy>=1.26.0",
  "fast3tree>=0.4.1",
  "scipy>=1.13.1",
  "scikit-image>=0.24.0",
  "h5py>=3.12.1",
  "tqdm>=4.67.1",
  "astropy>=5.1.0,<7.0.0",
  "matplotlib>=3.7.0", # scarlet needs this
]

[project.optional-dependencies]
dev = [
  "jupyter>=1.1.1",
  "jupyter-sphinx>=0.4.0",
  "nbmake>=1.5.5",
  "nbstripout>=0.8.1",
  "pre-commit>=4.0.1",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.1",
  "sphinx>=7.4.7",
  "sphinx-rtd-theme>=1.2.1",
]
scarlet = [
  "peigen>=0.0.9",
  "autograd>=1.5.0",
  "proxmin>=0.6.12",
  "pybind11>=2.10.3",
]

[project.urls]
Homepage = "https://lsstdesc.org/BlendingToolKit/index.html"
Repository = "https://github.com/LSSTDESC/BlendingToolKit"
"Bug Tracker" = "https://github.com/LSSTDESC/BlendingToolKit/issues"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["btk"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]

# Copying over black configuration
line-length = 100
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable the following rules:
# Pyflakes (`F`)
# Pycodestyle (`E`)
# Pycodestyle warnings (`W`)
# isort (`I`)
# pydocstyle (`D`)
# ruff specific errors (`RUF`)
# simplifying flake8 (`SIM`)
# return refactoring (`RET`)
select = ["E", "F", "W", "I", "D", "PL", "RUF", "SIM", "RET"]

# ignore
# PLR2004: Magic value comparison is OK most of the time.
# PLR0913: "Too many arguments in function definition", we should fix some of these eventually.
# SIM118: Too many places where we use `k in table.keys()`, and table is not a dict.
ignore = ["PLR2004", "PLR0913", "SIM118"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "I", "F"]
"**/{tests,docs,tools}/*" = ["E402", "D", "PLR0915"]
"**/*.ipynb" = ["I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = "-ra"
minversion = "6.0"
testpaths = ["tests"]
